--- a/nbs/resolucao.ipynb
+++ b/nbs/resolucao.ipynb
@@ -2017,11 +2017,19 @@
    "source": [
     "#### **_Comentários sobre a previsão de Diária Média._**\n",
     "1. O modelo `RandomForest` apresentou maior acuracidade na validação cruzada, sendo mais recomendável para utilização da previsão dos meses futuros.\n",
-    "2. Para interpretação das variáveis, utilizaremos os coeficientes gerados pela regressão Lasso: As variáveis que tiveram mais impacto foram: mes_12 (dezembro) e mes_7 (julho); lag1; e expanding_mean_lag1.\n",
+    "2. Para interpretação das variáveis, utilizaremos os coeficientes gerados pela regressão Lasso: As variáveis que tiveram mais impacto foram: mes_12 (dezembro) e mes_7 (julho); lag1; e expanding_mean_lag1.Dado determinado preço base $\\hat{|beta}$, as variações de preço são explicadas por: \n",
+    "$$\n",
+    "\\hat{y}_t = \\hat{\\beta}_0 +  37.18 \\cdot \\text{mes\\_12}_t \n",
+    "           + 0.31 \\cdot \\text{lag1}_t\n",
+    "           + 0.18 \\cdot \\text{mes\\_7}_t\n",
+    "           + 0.09 \\cdot \\text{expanding\\_mean\\_lag1}_t\n",
+    "           + \\varepsilon_t\n",
+    "$$\n",
+    "\n",
     "\n",
     "**_Recomendações de Negócio:_**\n",
-    "- O mês de dezembro apresenta maior ticket médio comparado aos demais meses. Aproximadamente 37 reais a mais que a média, provavelmente por se tratar de um período de férias, festas etc, as pessoas estão mais propensas a pagar valores um pouco mais altos por diárias. Além de que a demanda em outras locadoras aumenta, fazendo com que a oferta esteja mais escassa, logo o preço aumenta. Pode-se abordar estratégias de marketing voltado para esse período, buscando captação maior de clientes e consequentemente aumentando a margem e faturamento da empresa. Outro ponto é buscar meios de manter a frota com maior disponibilidade nesse período, evitando perda de clientes por falta de veículos, aproveitando ao máximo o _período ótimo_ financeiramente falando.\n",
-    "O mês de julho, que também teve coeficiente signifivativo, apresentou ticket médio apenas 0,18 reais acima, o que não traz impacto para o negócio.\n",
+    "- O mês de dezembro apresenta maior ticket médio comparado aos demais meses. Aproximadamente R$ 37 a mais que a média, provavelmente por se tratar de um período de férias, festas etc, as pessoas estão mais propensas a pagar valores um pouco mais altos por diárias. Além de que a demanda em outras locadoras aumenta, fazendo com que a oferta esteja mais escassa, logo o preço aumenta. Pode-se abordar estratégias de marketing voltado para esse período, buscando captação maior de clientes e consequentemente aumentando a margem e faturamento da empresa. Outro ponto é buscar meios de manter a frota com maior disponibilidade nesse período, evitando perda de clientes por falta de veículos, aproveitando ao máximo o _período ótimo_ financeiramente falando.\n",
+    "O mês de julho, que também teve coeficiente signifivativo, apresentou ticket médio apenas R$ 0,18 acima, o que não traz impacto para o negócio.\n",
     "\n",
     "- lag1 indica um leve aumento de preços médios no cenário de curto prazo. Ou seja, aumentos de preços tendem a se extender por mais ou período. Nesse caso, forçar minimamente o preço após períodos de alta talvez seja uma estratégia viável para melhorar os indicadores de receita.\n",
     "\n",
@@ -2607,11 +2615,13 @@
     "2. Interpretação das variáveis: Apenas a variável lag1 teve impacto significativo na previsão.\n",
     "\n",
     "**_Recomendações de Negócio:_**\n",
-    "- Apenas uma das variáveis foi relevante para o contexto da previsão, o que pode indicar ausência de informações e necessidade de maior investigação do problema. \n",
-    "O $\\hat{\\beta}$ = 0.72 sugere que o mês seguinte incorpora em média 72% do valor atual. No entanto, se olharmos o gráfico das séries, assim como a previsão, é notório que esse resultado não se sustenta em todos os casos, e pode haver uma elevação do valor devido à quebra estrutural da série que pode ter ocorrido entre o fim de 2023 e início de 2024, onde todas as séries apresentam crescimento acelerado e depois se sustenta. Embora seja verdade que exista uma leve tendência de crescimento, não é tão acentuada quanto 72%.\n",
-    "Cabe ao time de negócios investigar quais mudanças e estratégias foram implementadas nos períodos de maior variação positiva para tentar de alguma maneira replicar estes eventos e fomentar o crescimento do negócio. É possível que tenha ocorrido mudanças no mercado, como saída de um player relevante, ou inauguração de algum ponto turístico nas redondezas das lojas que atraiu mais clientes.\n",
-    "Caso se confirme uma mudança no cenário externo, deve-se buscar investir em campanhas direcionadas e tentar firmar parcerias com agências ou empresas que estejam envolvidas diretamente com os acontecimentos.\n",
-    "Caso seja uma mudança interna que ocasionou o crescimento, vale considerar replicar as estratégias e melhorá-las."
+    "- Apenas uma variável mostrou relevância para a previsão, o que pode indicar ausência de informações adicionais e reforça a necessidade de investigar melhor o problema.\n",
+    "\n",
+    "- O coeficiente estimado $\\hat{\\beta}$=0.72 sugere que o volume de contratações do mês atual incorpora, em média, 72% do valor observado no mês anterior. Isso indica que a série acompanha de perto o desempenho passado, mas também apresenta variações que podem ser explicadas por fatores ainda não incluídos no modelo.\n",
+    "\n",
+    "- É recomendável investigar, junto ao time de negócios, quais fatores e estratégias influenciam mais fortemente o volume de contratações e adicionar novas variáveis ao modelo, de forma a aumentar sua capacidade preditiva e interpretabilidade.\n",
+    "\n",
+    "- De forma prática, se houver queda em um mês, há uma tendência de que o mês seguinte também registre volume reduzido. Para reverter esse cenário, as equipes podem atuar de forma proativa, implementando estratégias comerciais e de marketing que impactem significativamente os resultados."
    ]
   }
  ],
