--- a/nbs/resolucao.ipynb
+++ b/nbs/resolucao.ipynb
@@ -2017,7 +2017,7 @@
    "source": [
     "#### **_Comentários sobre a previsão de Diária Média._**\n",
     "1. O modelo `RandomForest` apresentou maior acuracidade na validação cruzada, sendo mais recomendável para utilização da previsão dos meses futuros.\n",
-    "2. Para interpretação das variáveis, utilizaremos os coeficientes gerados pela regressão Lasso: As variáveis que tiveram mais impacto foram: mes_12 (dezembro) e mes_7 (julho); lag1; e expanding_mean_lag1.Dado determinado preço base $\\hat{|beta}$, as variações de preço são explicadas por: \n",
+    "2. Para interpretação das variáveis, utilizaremos os coeficientes gerados pela regressão Lasso: As variáveis que tiveram mais impacto foram: mes_12 (dezembro) e mes_7 (julho); lag1; e expanding_mean_lag1.Dado determinado preço base $\\hat{\\beta}$, as variações de preço são explicadas por: \n",
     "$$\n",
     "\\hat{y}_t = \\hat{\\beta}_0 +  37.18 \\cdot \\text{mes\\_12}_t \n",
     "           + 0.31 \\cdot \\text{lag1}_t\n",
